@@ -1,5 +1,11 @@
 2007-10-17 Takuro Ashie <ashie@homa.ne.jp>
 
+	* src/gimv_exif_view.[ch]: Rename from src/exif_view.[ch]
+	* src/Makefile.am, src/gimv_image_win.c. src/gimv_thumb_view.c:
+	Follow the change.
+
+2007-10-17 Takuro Ashie <ashie@homa.ne.jp>
+
 	* src/gimv_dir_view.[ch]: Renamed from src/dirview.[ch]
 	* src/Makefile.am, src/gimageview.c src/gimv_thumb_view.c,
 	  src/gimv_thumb_win.c, src/prefs_ui/prefs_ui_thumbwin.c:
